# finance-dashboard-2025

./: .gitignore  Makefile  README.md  pyproject.toml
airflow/: Dockerfile  Makefile  docker-compose.yaml  requirements.txt
airflow/dags/: macro_pipeline_dag.py
finance_dashboard_dbt/: Makefile  dbt_project.yml
finance_dashboard_dbt/.dbt/: profiles.yml
finance_dashboard_dbt/models/marts/: fct_econ_summary.sql  schema.yaml
finance_dashboard_dbt/models/marts/normalized/: normalized_market_indices.sql  schema.yaml
finance_dashboard_dbt/models/metadata/: last_updated.sql  schema.yml
finance_dashboard_dbt/models/staging/: schema.yml  stg_macro_data.sql  stg_market_indices.sql
notebooks/: eda_macro_data.ipynb
scripts/: Makefile  fetch_market_indices.py  fetch_worldbank.py  load_to_bigquery.py  upload_to_gcs.py
terraform/: Makefile  README.md  main.tf  variables.tf
